--- a/wrangling/Players_Full.ipynb
+++ b/wrangling/Players_Full.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled85.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPTCTQslhHoPBKCZMZ8TDsp",
+      "authorship_tag": "ABX9TyOYmnvmlonHl3mWzOkybfb9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,9 +47,9 @@
       },
       "source": [
         "# Load the data\n",
-        "players_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-actuals/players_full.csv')\n",
-        "bye_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/bye.csv')\n",
-        "injury_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/injury.csv')"
+        "players_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/players_full.csv')\n",
+        "bye_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/bye.csv')\n",
+        "injury_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/injury.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -59,11 +59,11 @@
       "metadata": {
         "id": "3AROeyGn0g_t",
         "colab_type": "code",
+        "outputId": "dbccb22f-cc53-4ccb-ffd9-e46176ce70d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 221
-        },
-        "outputId": "be1ca226-9c2b-44e1-d9f0-141ecd972204"
+          "height": 326
+        }
       },
       "source": [
         "# The dataframe of all 2019 players\n",
@@ -276,11 +276,11 @@
       "metadata": {
         "id": "Pc2vwC4b0m0r",
         "colab_type": "code",
+        "outputId": "c1d84e07-2a98-4e84-e910-aae50ece5fad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "265e3117-eedd-4c7d-c671-3b47d8f82a8e"
+        }
       },
       "source": [
         "# The dataframe of bye weeks for 2019 teams\n",
@@ -389,11 +389,11 @@
       "metadata": {
         "id": "_UWvWSMb0p9n",
         "colab_type": "code",
+        "outputId": "32ba96c1-5479-4e98-a8ba-3b4968585bfe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "ed110b4c-3f02-4f89-97c1-4d8c059f4826"
+        }
       },
       "source": [
         "# The dataframe of injuries for 2019 players\n",
@@ -560,6 +560,8 @@
         "\n",
         "    bye_week.append(bye_df['bye-week'].loc[(bye_df['player']==team)].iloc[0])\n",
         "    injury_weeks = injury_df['week'].loc[(injury_df['player']==player)]\n",
+        "    \n",
+        "    # If no injuries set injury week to non-existing week 18\n",
         "    if (len(injury_weeks)==0):\n",
         "        injury_week.append(18)\n",
         "    else:\n",
@@ -576,11 +578,11 @@
       "metadata": {
         "id": "IsJ-GeWx4jXv",
         "colab_type": "code",
+        "outputId": "af022872-7d55-4726-8d81-ca42d30e3530",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 626
-        },
-        "outputId": "30dd0316-d533-42c3-c3a0-a02709935b54"
+        }
       },
       "source": [
         "# The revised players_df dataframe\n",
