--- a/predictions-final/Defense_Predictions_All.ipynb
+++ b/predictions-final/Defense_Predictions_All.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled82.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO5e8Ii4YUx+EPWWgb7Rbrr",
+      "authorship_tag": "ABX9TyPkQOwZSnGerlTa21VyKDFR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
       "metadata": {
         "id": "qM2V9XfrHEVw",
         "colab_type": "code",
-        "outputId": "9e9ecbcb-ccba-43a4-9b0d-7d4dc3044263",
+        "outputId": "5b42fc51-b488-4d4d-f08a-12864ce004e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
@@ -79,9 +79,9 @@
       },
       "source": [
         "# Import data\n",
-        "original_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-actuals/actuals_defense.csv')\n",
-        "player_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/players.csv')\n",
-        "bye_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/bye.csv')"
+        "original_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/actuals/actuals_defense.csv')\n",
+        "player_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/players.csv')\n",
+        "bye_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/bye.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "XkQBP0b-HM7H",
         "colab_type": "code",
-        "outputId": "91c980cd-2785-4ed3-9389-6ca405e54a0a",
+        "outputId": "2b6a4453-4fe7-4a76-f184-9ac947dba274",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 372
@@ -657,7 +657,7 @@
       "metadata": {
         "id": "BQQxtri9HRjc",
         "colab_type": "code",
-        "outputId": "429f3740-6703-48a0-b9be-7dc255eb2b95",
+        "outputId": "cb301c96-ddc5-4344-b26a-17b01d0afbd0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -770,7 +770,7 @@
       "metadata": {
         "id": "-eAmeqx6O2zG",
         "colab_type": "code",
-        "outputId": "3800b49d-6bfc-407f-ca75-b0988f726c58",
+        "outputId": "4104f43c-2da2-4303-a507-1f74e51740a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -916,6 +916,8 @@
         "# The main code for iterating through the player(defense) list, calculating the points and adding the rows\n",
         "# to the final_df dataframe.\n",
         "def main(w):\n",
+        "\n",
+        "    # Create the column names\n",
         "    week_cname = 'week' + str(w) + '-cur'\n",
         "    week_pname = 'week' + str(w) + '-pred'\n",
         "    week_aname = 'week' + str(w) + '-act'\n",
@@ -932,6 +934,9 @@
         "\n",
         "    defense_df = player_df.loc[player_df['position1'] == 'DF']\n",
         "    player_list = defense_df['player'].tolist()\n",
+        "\n",
+        "    # The row is the current row of the dataframe (0)\n",
+        "    # The column is the column of the dataframe (309 = 2019-game1)\n",
         "    row = 0\n",
         "    col = 308 + w\n",
         "\n",
@@ -946,22 +951,26 @@
         "\n",
         "        bye_week = bye_df['bye-week'].loc[(bye_df['player']==player)].iloc[0]\n",
         "\n",
+        "        # Handle bye week\n",
         "        if w > bye_week:\n",
         "            new_col = col - 1\n",
         "        else:\n",
         "            new_col = col\n",
         "\n",
+        "        # Handle Houston (started in 2002)\n",
         "        if player == 'HOU':\n",
         "            train_data = original_df.iloc[row, 37:new_col]\n",
         "        else:\n",
         "            train_data = original_df.iloc[row, 5:new_col]\n",
         "\n",
+        "        # Calculate current points\n",
         "        if w == 1:\n",
         "            current = original_df.iloc[row, 293:309]\n",
         "        else:\n",
         "            current = original_df.iloc[row, 309:new_col]\n",
         "        cur_points = current.sum()\n",
         "\n",
+        "        # Calculate actual points\n",
         "        actuals = original_df.iloc[row, new_col:325]\n",
         "        act_points = actuals.sum()\n",
         "        row = row + 1\n",
@@ -986,6 +995,7 @@
         "        else:\n",
         "            n_periods = 17 - w\n",
         " \n",
+        "        # Calculate predicted points\n",
         "        fc = model.predict(n_periods=n_periods, return_conf_int=False)\n",
         "        index_of_fc = np.arange(len(train_data), len(train_data)+n_periods)\n",
         "        fc_series = pd.Series(fc, index=index_of_fc)\n",
@@ -1006,7 +1016,7 @@
         "colab": {}
       },
       "source": [
-        "\n",
+        "# Add the diff and pct columns and convert pred to integer\n",
         "for i in range(1, 18):\n",
         "    week = i\n",
         "    final_df = main(week)\n",
