--- a/predictions-final/Rookie_Predictions_Week1.ipynb
+++ b/predictions-final/Rookie_Predictions_Week1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled78.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOVeLOviIUgO/Xn8KPvmP6G",
+      "authorship_tag": "ABX9TyMrKkIy7aFWDeZXpbdkYtzf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,12 +74,13 @@
         "colab": {}
       },
       "source": [
-        "player_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-actuals/players_full.csv')\n",
-        "kickers_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-actuals/actuals_rookie_kickers.csv')\n",
-        "offense_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-actuals/actuals_rookie_offense.csv')\n",
-        "kickers2019_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-actuals/actuals_rookie2019_kickers.csv')\n",
-        "offense2019_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-actuals/actuals_rookie2019_offense.csv')\n",
-        "rookies_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/rookies.csv')\n",
+        "# Load the data\n",
+        "player_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/players_full.csv')\n",
+        "kickers_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/actuals/actuals_rookie_kickers.csv')\n",
+        "offense_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/actuals/actuals_rookie_offense.csv')\n",
+        "kickers2019_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/actuals/actuals_rookie2019_kickers.csv')\n",
+        "offense2019_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/actuals/actuals_rookie2019_offense.csv')\n",
+        "rookies_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/rookies.csv')\n",
         "actuals_df = pd.concat([kickers_df, offense_df], ignore_index=True)\n",
         "actuals2019_df = pd.concat([kickers2019_df, offense2019_df], ignore_index=True)"
       ],
@@ -91,13 +92,14 @@
       "metadata": {
         "id": "TejDRzCRssXB",
         "colab_type": "code",
-        "outputId": "ac7cec3e-9970-452d-8a10-2257532ce9ae",
+        "outputId": "4371517d-a80e-4c92-9ed2-f4a2629de05d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
         }
       },
       "source": [
+        "# The players_df dataframe of all 2019 players and their rookie stats\n",
         "player_df.head()"
       ],
       "execution_count": 4,
@@ -307,13 +309,14 @@
       "metadata": {
         "id": "ipRc24Sns4z0",
         "colab_type": "code",
-        "outputId": "4638e29c-2fd4-49d9-f7af-5f585e01d9a7",
+        "outputId": "11ae8171-332e-42ee-989f-771af19212a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
         }
       },
       "source": [
+        "# The actual_df dataframe of actual rookie points for the rookie year of each veteran\n",
         "actuals_df.head()"
       ],
       "execution_count": 5,
@@ -511,13 +514,14 @@
       "metadata": {
         "id": "xQsbhKXUD1kP",
         "colab_type": "code",
-        "outputId": "464e364f-0b5a-429e-ca31-19212805d064",
+        "outputId": "e8ee5800-3568-4689-a95e-bb560652fc75",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         }
       },
       "source": [
+        "# The rookies_df dataframe of all 2019 rookies\n",
         "rookies_df.head()"
       ],
       "execution_count": 6,
@@ -623,13 +627,14 @@
       "metadata": {
         "id": "CM9b9lzfDmv1",
         "colab_type": "code",
-        "outputId": "95ec9752-35e4-4aab-c9c7-08cd13ba0f64",
+        "outputId": "658e62bd-3f39-4356-c339-4f9abfe6f0f3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
         }
       },
       "source": [
+        "# The actuals2019_df dataframe of the actual rookie points for each 2019 rookie\n",
         "actuals2019_df.head()"
       ],
       "execution_count": 7,
@@ -907,6 +912,7 @@
         "colab": {}
       },
       "source": [
+        "# Create the train and test data series\n",
         "train_df = fill_df(actuals_df, 'train')\n",
         "test_df = fill_df(rookies_df, 'final')"
       ],
@@ -918,13 +924,14 @@
       "metadata": {
         "id": "bhyiPNCtzkk1",
         "colab_type": "code",
-        "outputId": "9833f5bc-60b5-4788-e0ac-797b20ce91a7",
+        "outputId": "da6db04a-53c8-403d-8c54-07b19cee0289",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
         }
       },
       "source": [
+        "# The training data of rookie year with a target of rookie year points\n",
         "train_df.tail()"
       ],
       "execution_count": 10,
@@ -1092,13 +1099,14 @@
       "metadata": {
         "id": "NGbgn6O-9TaN",
         "colab_type": "code",
-        "outputId": "8568650f-dade-46b5-da2e-b463e08f03ad",
+        "outputId": "fa0d3182-6d52-42e3-bcbb-5c06cdedc7bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
         }
       },
       "source": [
+        "# The test data with a target of 2019 points\n",
         "test_df.tail()"
       ],
       "execution_count": 11,
@@ -1269,6 +1277,7 @@
         "colab": {}
       },
       "source": [
+        "# Set up train, test and target for model\n",
         "target = 'points'\n",
         "X_train = train_df.drop(columns=[target])\n",
         "y_train = train_df[target]\n",
@@ -1298,13 +1307,14 @@
       "metadata": {
         "id": "TV-wQMCPGN6n",
         "colab_type": "code",
-        "outputId": "acdfd407-34ce-4ca8-bbc1-fe3725403561",
+        "outputId": "fd5fda98-5551-44a8-aac0-8f4bdc2029e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 156
         }
       },
       "source": [
+        "# Run the XGBoost model\n",
         "pipeline = make_pipeline(\n",
         "    ce.OneHotEncoder(use_cat_names=True), \n",
         "    XGBRegressor(n_estimators=200, n_jobs=-1)\n",
@@ -1338,13 +1348,13 @@
         {
           "output_type": "stream",
           "text": [
-            "[17:59:00] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-            "Validation Mean Absolute Error: 33.52964909886851\n",
-            "Validation R^2: 0.39974062135875055\n",
+            "[16:18:52] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "Validation Mean Absolute Error: 28.93077809461112\n",
+            "Validation R^2: 0.49503782317974154\n",
             "\n",
             "\n",
-            "Test Mean Absolute Error: 31.28623723315743\n",
-            "Test R^2: 0.43312035350627165\n"
+            "Test Mean Absolute Error: 30.759860455832396\n",
+            "Test R^2: 0.4344394178147283\n"
           ],
           "name": "stdout"
         }
@@ -1355,7 +1365,7 @@
       "metadata": {
         "id": "1OvReWreGqwC",
         "colab_type": "code",
-        "outputId": "7648b19e-7c49-4a32-c7a1-c7c1c4d2c23a",
+        "outputId": "0809dbb4-f7e6-4825-dc3a-a2dbe3dba4d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
@@ -1433,9 +1443,9 @@
               "      <td>Utah</td>\n",
               "      <td>Pacific 12</td>\n",
               "      <td>140.00</td>\n",
-              "      <td>80.713760</td>\n",
-              "      <td>-59.286240</td>\n",
-              "      <td>-0.734525</td>\n",
+              "      <td>51.413628</td>\n",
+              "      <td>-88.586372</td>\n",
+              "      <td>-1.723013</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -1455,9 +1465,9 @@
               "      <td>Illinois</td>\n",
               "      <td>Big Ten</td>\n",
               "      <td>87.00</td>\n",
-              "      <td>32.714558</td>\n",
-              "      <td>-54.285442</td>\n",
-              "      <td>-1.659367</td>\n",
+              "      <td>50.298122</td>\n",
+              "      <td>-36.701878</td>\n",
+              "      <td>-0.729687</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -1477,9 +1487,9 @@
               "      <td>Oklahoma</td>\n",
               "      <td>Big 12</td>\n",
               "      <td>112.00</td>\n",
-              "      <td>131.984161</td>\n",
-              "      <td>19.984161</td>\n",
-              "      <td>0.151413</td>\n",
+              "      <td>103.295059</td>\n",
+              "      <td>-8.704941</td>\n",
+              "      <td>-0.084273</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -1499,9 +1509,9 @@
               "      <td>Virginia Tech</td>\n",
               "      <td>Atlantic Coast (ACC)</td>\n",
               "      <td>124.00</td>\n",
-              "      <td>48.127018</td>\n",
-              "      <td>-75.872982</td>\n",
-              "      <td>-1.576515</td>\n",
+              "      <td>52.736938</td>\n",
+              "      <td>-71.263062</td>\n",
+              "      <td>-1.351293</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -1521,21 +1531,21 @@
               "      <td>Purdue</td>\n",
               "      <td>Big Ten</td>\n",
               "      <td>55.36</td>\n",
-              "      <td>3.567758</td>\n",
-              "      <td>-51.792242</td>\n",
-              "      <td>-14.516748</td>\n",
+              "      <td>32.292255</td>\n",
+              "      <td>-23.067745</td>\n",
+              "      <td>-0.714343</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "    player position1  height  weight  ...  points  prediction       diff    percent\n",
-              "0  MG-0306         K    72.0   232.0  ...  140.00   80.713760 -59.286240  -0.734525\n",
-              "1  CM-2137         K    73.0   190.0  ...   87.00   32.714558 -54.285442  -1.659367\n",
-              "2  AS-0575         K    69.0   209.0  ...  112.00  131.984161  19.984161   0.151413\n",
-              "3  JS-3825         K    71.0   210.0  ...  124.00   48.127018 -75.872982  -1.576515\n",
-              "4  DB-2750        QB    72.0   205.0  ...   55.36    3.567758 -51.792242 -14.516748\n",
+              "    player position1  height  weight  ...  points  prediction       diff   percent\n",
+              "0  MG-0306         K    72.0   232.0  ...  140.00   51.413628 -88.586372 -1.723013\n",
+              "1  CM-2137         K    73.0   190.0  ...   87.00   50.298122 -36.701878 -0.729687\n",
+              "2  AS-0575         K    69.0   209.0  ...  112.00  103.295059  -8.704941 -0.084273\n",
+              "3  JS-3825         K    71.0   210.0  ...  124.00   52.736938 -71.263062 -1.351293\n",
+              "4  DB-2750        QB    72.0   205.0  ...   55.36   32.292255 -23.067745 -0.714343\n",
               "\n",
               "[5 rows x 19 columns]"
             ]
@@ -1624,13 +1634,14 @@
       "metadata": {
         "id": "4DRKFnXQHBM9",
         "colab_type": "code",
-        "outputId": "f1e215e4-ca94-4bf4-b368-0c8214cae3a5",
+        "outputId": "834b3c7d-54cb-4888-8acb-76e52b086b9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 306
         }
       },
       "source": [
+        "# Convert pred to integer\n",
         "final_df['week1-pred'] = final_df['week1-pred'].astype(int)\n",
         "final_df.head()"
       ],
@@ -1679,10 +1690,10 @@
               "      <td>Matt Gay</td>\n",
               "      <td>K</td>\n",
               "      <td>0</td>\n",
-              "      <td>80</td>\n",
+              "      <td>51</td>\n",
               "      <td>140.00</td>\n",
-              "      <td>-59.286240</td>\n",
-              "      <td>-0.734525</td>\n",
+              "      <td>-88.586372</td>\n",
+              "      <td>-1.723013</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -1692,10 +1703,10 @@
               "      <td>Chase McLaughlin</td>\n",
               "      <td>K</td>\n",
               "      <td>0</td>\n",
-              "      <td>32</td>\n",
+              "      <td>50</td>\n",
               "      <td>87.00</td>\n",
-              "      <td>-54.285442</td>\n",
-              "      <td>-1.659367</td>\n",
+              "      <td>-36.701878</td>\n",
+              "      <td>-0.729687</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -1705,10 +1716,10 @@
               "      <td>Austin Seibert</td>\n",
               "      <td>K</td>\n",
               "      <td>0</td>\n",
-              "      <td>131</td>\n",
+              "      <td>103</td>\n",
               "      <td>112.00</td>\n",
-              "      <td>19.984161</td>\n",
-              "      <td>0.151413</td>\n",
+              "      <td>-8.704941</td>\n",
+              "      <td>-0.084273</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -1718,10 +1729,10 @@
               "      <td>Joey Slye</td>\n",
               "      <td>K</td>\n",
               "      <td>0</td>\n",
-              "      <td>48</td>\n",
+              "      <td>52</td>\n",
               "      <td>124.00</td>\n",
-              "      <td>-75.872982</td>\n",
-              "      <td>-1.576515</td>\n",
+              "      <td>-71.263062</td>\n",
+              "      <td>-1.351293</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -1731,22 +1742,22 @@
               "      <td>David Blough</td>\n",
               "      <td>QB</td>\n",
               "      <td>0</td>\n",
-              "      <td>3</td>\n",
+              "      <td>32</td>\n",
               "      <td>55.36</td>\n",
-              "      <td>-51.792242</td>\n",
-              "      <td>-14.516748</td>\n",
+              "      <td>-23.067745</td>\n",
+              "      <td>-0.714343</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "    player   first        last  ... week1-act week1-diff  week1-pct\n",
-              "0  MG-0306    Matt         Gay  ...    140.00 -59.286240  -0.734525\n",
-              "1  CM-2137   Chase  McLaughlin  ...     87.00 -54.285442  -1.659367\n",
-              "2  AS-0575  Austin     Seibert  ...    112.00  19.984161   0.151413\n",
-              "3  JS-3825    Joey        Slye  ...    124.00 -75.872982  -1.576515\n",
-              "4  DB-2750   David      Blough  ...     55.36 -51.792242 -14.516748\n",
+              "    player   first        last  ... week1-act week1-diff week1-pct\n",
+              "0  MG-0306    Matt         Gay  ...    140.00 -88.586372 -1.723013\n",
+              "1  CM-2137   Chase  McLaughlin  ...     87.00 -36.701878 -0.729687\n",
+              "2  AS-0575  Austin     Seibert  ...    112.00  -8.704941 -0.084273\n",
+              "3  JS-3825    Joey        Slye  ...    124.00 -71.263062 -1.351293\n",
+              "4  DB-2750   David      Blough  ...     55.36 -23.067745 -0.714343\n",
               "\n",
               "[5 rows x 10 columns]"
             ]
