--- a/predictions-final/Rookie_Predictions_2_to_17.ipynb
+++ b/predictions-final/Rookie_Predictions_2_to_17.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled83.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMA/kK1M0uGaw0tGYppJPA9",
+      "authorship_tag": "ABX9TyN1f6J/HIQT24iZOZDpSRQl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,12 +47,12 @@
       },
       "source": [
         "# Load the data\n",
-        "player_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-actuals/players_full.csv')\n",
-        "kickers2019_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-actuals/actuals_rookie2019_kickers.csv')\n",
-        "offense2019_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-actuals/actuals_rookie2019_offense.csv')\n",
-        "rookies_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/rookies.csv')\n",
-        "bye_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/bye.csv')\n",
-        "injury_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/injury.csv')\n",
+        "player_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/players_full.csv')\n",
+        "kickers2019_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/actuals/actuals_rookie2019_kickers.csv')\n",
+        "offense2019_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/actuals/actuals_rookie2019_offense.csv')\n",
+        "rookies_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/rookies.csv')\n",
+        "bye_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/bye.csv')\n",
+        "injury_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/injury.csv')\n",
         "actuals2019_df = pd.concat([kickers2019_df, offense2019_df], ignore_index=True)"
       ],
       "execution_count": 0,
@@ -63,7 +63,7 @@
       "metadata": {
         "id": "ryYHKVlEtdj5",
         "colab_type": "code",
-        "outputId": "f49ad4d5-7b39-4d00-eb20-37e7de26b79b",
+        "outputId": "8878a9ba-2a99-430c-9195-ad789e62737b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
@@ -280,7 +280,7 @@
       "metadata": {
         "id": "6Zm3tyPXtmTZ",
         "colab_type": "code",
-        "outputId": "a93658fa-1987-4a8a-8659-d15a523b64e7",
+        "outputId": "5d2d9563-7f65-43ba-9a45-cf654807744f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -393,7 +393,7 @@
       "metadata": {
         "id": "6Q76MIy0ttSN",
         "colab_type": "code",
-        "outputId": "7e039a6b-3bab-4cd6-db9e-54dbed55a0e9",
+        "outputId": "41fb7329-14a3-4eb3-c801-c11454551dc0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -598,7 +598,7 @@
       "metadata": {
         "id": "qquHE_lSu9wJ",
         "colab_type": "code",
-        "outputId": "3f25ec6c-9bc6-4d47-a002-893729ec5d56",
+        "outputId": "fb255a19-b57b-421f-a84e-414c1f37987f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -711,7 +711,7 @@
       "metadata": {
         "id": "w7YtoRsS9paS",
         "colab_type": "code",
-        "outputId": "1120c4b4-9304-479c-efe7-57443467c85c",
+        "outputId": "665ccbc9-4db4-4bbe-d26a-6af0bae86ea6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -916,6 +916,9 @@
         "                     ]\n",
         "\n",
         "    player_list = rookies_df['player'].tolist()\n",
+        "\n",
+        "    # The row is the current row of the dataframe (0)\n",
+        "    # The column is the column of the dataframe (5 = 2019-game1)\n",
         "    row = 0\n",
         "    col = 4 + w\n",
         "\n",
@@ -929,12 +932,14 @@
         "        position1 = rookies_df['position1'].loc[(rookies_df['player']==player)].iloc[0]\n",
         "        team = player_df['cteam'].loc[(player_df['player']==player)].iloc[0]\n",
         "\n",
+        "        # Calculate injury week\n",
         "        injury_weeks = injury_df['week'].loc[(injury_df['player']==player)]\n",
         "        if (len(injury_weeks)==0):\n",
         "            injury_week = 18\n",
         "        else:\n",
         "            injury_week = min(injury_weeks)\n",
         "\n",
+        "        # Handle bye week\n",
         "        bye_week = bye_df['bye-week'].loc[(bye_df['player']==team)].iloc[0]\n",
         "\n",
         "        if w > bye_week:\n",
@@ -942,9 +947,11 @@
         "        else:\n",
         "            new_col = col\n",
         "\n",
+        "        # Calculate current points\n",
         "        current = actuals2019_df.iloc[row, 5:new_col]\n",
         "        cur_points = current.sum()\n",
         "\n",
+        "        # Calculate actual points\n",
         "        act_points = actuals2019_df.loc[(actuals2019_df['player']==player)].iloc[0, new_col:21].sum()\n",
         "        row = row + 1\n",
         "    \n",
@@ -976,6 +983,7 @@
         "colab": {}
       },
       "source": [
+        "# Run for seasons 2 through 17\n",
         "for i in range(2, 18):\n",
         "    week = i\n",
         "    final_df = main(week)\n",
