--- a/predictions-final/Defense_Predictions_All.ipynb
+++ b/predictions-final/Defense_Predictions_All.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled82.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPkQOwZSnGerlTa21VyKDFR",
+      "authorship_tag": "ABX9TyODA5gfF9ptHJbvrLzD7mTc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         "import pmdarima as pm\n",
         "from sklearn import preprocessing"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +101,7 @@
         "# The dataframe of actual defense points for each game from 2000-2019\n",
         "original_df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -667,7 +667,7 @@
         "# The dataframe of all 2019 players\n",
         "player_df.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -780,7 +780,7 @@
         "# The dataframe of bye weeks for 2019 teams\n",
         "bye_df.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1016,7 +1016,7 @@
         "colab": {}
       },
       "source": [
-        "# Add the diff and pct columns and convert pred to integer\n",
+        "# Run for seasons 1 through 17\n",
         "for i in range(1, 18):\n",
         "    week = i\n",
         "    final_df = main(week)\n",
