--- a/predictions-final/Offense_Predictions_All.ipynb
+++ b/predictions-final/Offense_Predictions_All.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled84.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO1X9E6OMYEO+oOBYFHmqff",
+      "authorship_tag": "ABX9TyMYrFKy4/r1WK49JdBjLLKo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "DffZtLAbFvcW",
         "colab_type": "code",
-        "outputId": "19c9fd6d-5bbe-4003-9c7f-911a352d7369",
+        "outputId": "de5f8a99-9544-4279-9e66-dd5262770e6d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
@@ -82,12 +82,12 @@
       },
       "source": [
         "# Import data\n",
-        "players_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-actuals/players_full.csv')\n",
-        "original_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-actuals/actuals_offense.csv')\n",
-        "kickers_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/rookies_non_kicker.csv')\n",
-        "offense_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/rookies_non_offense.csv')\n",
-        "bye_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/bye.csv')\n",
-        "injury_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/injury.csv')\n",
+        "players_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/players_full.csv')\n",
+        "original_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/actuals/actuals_offense.csv')\n",
+        "kickers_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/rookies_non_kicker.csv')\n",
+        "offense_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/rookies_non_offense.csv')\n",
+        "bye_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/bye.csv')\n",
+        "injury_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/injury.csv')\n",
         "player_df = pd.concat([kickers_df, offense_df], ignore_index=True)"
       ],
       "execution_count": 0,
@@ -98,7 +98,7 @@
       "metadata": {
         "id": "m78bxZQ_GNtQ",
         "colab_type": "code",
-        "outputId": "7868c9c9-d784-43ec-ac4b-d83c9b2e13d4",
+        "outputId": "33726094-c8ca-4923-99bb-4075f60c115f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 355
@@ -664,7 +664,7 @@
       "metadata": {
         "id": "JaUeCnKAGTXY",
         "colab_type": "code",
-        "outputId": "e668cf79-62d0-4098-fa02-c306e8fcd59d",
+        "outputId": "8afb4acf-5270-493a-b175-8a28542f0735",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -777,7 +777,7 @@
       "metadata": {
         "id": "-tpuw1teGd-v",
         "colab_type": "code",
-        "outputId": "68c309b4-ee9b-402e-d255-cc73008ef4cd",
+        "outputId": "eb0aa9b5-1ed0-4560-8898-cbaf95cd6b97",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -890,7 +890,7 @@
       "metadata": {
         "id": "5rdO3zKnGhX3",
         "colab_type": "code",
-        "outputId": "c9c91850-e359-4047-8015-57723729034e",
+        "outputId": "04eda8a5-240c-454f-ab4e-2876c6064533",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -1080,6 +1080,8 @@
         "# The main code for iterating through the player(offense and kicker) list, calculating the points and adding the rows\n",
         "# to the final_df dataframe.\n",
         "def main(w):\n",
+        "    \n",
+        "    # Create the column names\n",
         "    week_cname = 'week' + str(w) + '-cur'\n",
         "    week_pname = 'week' + str(w) + '-pred'\n",
         "    week_aname = 'week' + str(w) + '-act'\n",
@@ -1095,6 +1097,8 @@
         "                     ]\n",
         "\n",
         "    player_list = offense_df['player'].tolist()\n",
+        "\n",
+        "    # The column is the column of the dataframe (309 = 2019-game1)\n",
         "    end_col = 308 + w\n",
         "\n",
         "    week_df = pd.DataFrame(columns = column_names)\n",
@@ -1109,6 +1113,7 @@
         "        row = original_df.index[(original_df['player']==player)][0]\n",
         "        team = players_df['cteam'].loc[(players_df['player']==player)].iloc[0]\n",
         "\n",
+        "        # Calculate the injury week\n",
         "        injury_weeks = injury_df['week'].loc[(injury_df['player']==player)]\n",
         "        if (len(injury_weeks)==0):\n",
         "            injury_week = 18\n",
@@ -1117,10 +1122,12 @@
         "\n",
         "        bye_week = bye_df['bye-week'].loc[(bye_df['player']==team)].iloc[0]\n",
         "\n",
+        "        # Handle players who starte prior to 2000\n",
         "        if start_year < 2000:\n",
         "            start_year = 2000\n",
         "        col = ((start_year - 2000) * 16) + 5\n",
         "\n",
+        "        # Handle the bye week\n",
         "        if w > bye_week:\n",
         "            new_col = end_col - 1\n",
         "        else:\n",
@@ -1128,15 +1135,18 @@
         "\n",
         "        train_data = original_df.iloc[row, col:new_col]\n",
         "\n",
+        "        # Calculate current points\n",
         "        if w == 1:\n",
         "            current = original_df.iloc[row, 293:309]\n",
         "        else:  \n",
         "            current = original_df.iloc[row, 309:new_col]\n",
         "        cur_points = current.sum()\n",
         "\n",
+        "        # Calculate actual points\n",
         "        actuals = original_df.iloc[row, new_col:325]\n",
         "        act_points = actuals.sum()\n",
         "\n",
+        "        # Run the model excluding players without enough data\n",
         "        if (start_year < 2016) & (player != 'GG-0310') & (train_data.sum() > 10):\n",
         "            # ARIMA model\n",
         "            model = pm.auto_arima(train_data, start_p=1, start_q=1,\n",
@@ -1182,6 +1192,7 @@
         "colab": {}
       },
       "source": [
+        "# Run for seasons 1 through 17\n",
         "for i in range(1, 18):\n",
         "    week = i\n",
         "    final_df = main(week)\n",
